libs/iroha_data_model/derive/tests/ui_fail/transparent_api_private_item.stderr
error[E0603]: struct `ClientQueryPayload` is private
 --> tests/ui_fail/transparent_api_private_item.rs:1:36
  |
1 | use iroha_data_model::query::http::ClientQueryPayload;
  |                                    ^^^^^^^^^^^^^^^^^^ private struct
  |
note: the struct `ClientQueryPayload` is defined here
 --> $WORKSPACE/libs/iroha_data_model/src/query/mod.rs
  |
  |     pub use self::model::*;
  |             ^^^^^^^^^^^
